Added example of java_opts, properties to project lis-opts